--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h1 ALIGN="center">El desarrollo de la tecnología en tiempo de pandemia</h1>
 
 <p>Desde hace ya unos meses mucha gente empezó a trabajar de manera virtual al igual que muchos jóvenes quienes hasta el día de hoy siguen viendo clases de esta forma y todo por causa de un virus que se volvió una pandemia.</p>
-<img scr="screenshot_6_crop1587686722067.jpg_258117318.jpg"  alt="gente con cubre bocas" width="350" height="260">
+<img scr="https://drive.google.com/drive/u/0/my-drive"  alt="gente con cubre bocas" width="350" height="260">
 <p>El hecho de estar en casa hizo que el tiempo en familia aumentara y todo se volviera más unido pero tampoco hay que dejar de lado del impacto que tuvo la tecnología en este tiempo de pandemia, pues al estar en casa y no poder salir hacia que buscáramos maneras de distraernos como viendo películas, series, el estar más pendientes a las redes sociales, hacer compras online, mantenernos en contacto con nuestros seres queridos, todo esto y más hizo que nuestra cuarentena fuera más facíl de llevar. Definitivamente la tacnología ha desempeñado un papel importante hasta ahora en la tarea de intentar superar varios retos.</p>
 <p>También hay que tener en cuenta de que varios desarrolladores han trabajado para que las organizaciones funcionen para una tiempo de mayor conectividad y no solo desarrolladores están pensando en lo que pasará en el futuro, personas que tienen sus empresas y demás piensan en como hacer para que no todo se vaya a la borda como vehículos de entrega autónomos; un crecimiento acelerado de pagos digitales, de la tecnología de pago sin contacto; un incremento en las conferencias de voz y video, etc.</p>
 
