--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 
 <p>Todo esto y más hizo que nuestra cuarentena fuera más facíl de llevar. Definitivamente la tacnología ha desempeñado un papel importante hasta ahora en la tarea de intentar superar varios retos.</p>
 
-<img scr="https://es.wikipedia.org/wiki/Pandemia_de_enfermedad_por_coronavirus_de_2019-2020#/media/Archivo:Coronavirus_mundial.jpg" alt="varios sitios en donde se puede evidenciar lo que ha hecho el virus" width="350" height="260">
+<img scr="https://es.wikipedia.org/wiki/Pandemia_de_enfermedad_por_coronavirus_de_2019-2020#/media/Archivo:Coronavirus_mundial.png" alt="varios sitios en donde se puede evidenciar lo que ha hecho el virus" width="350" height="260">
 
 <p>También hay que tener en cuenta de que varios desarrolladores han trabajado para que las organizaciones funcionen para una tiempo de mayor conectividad y no solo desarrolladores están pensando en lo que pasará en el futuro, personas que tienen sus empresas y demás piensan en como hacer para que no todo se vaya a la borda como vehículos de entrega autónomos; un crecimiento acelerado de pagos digitales, de la tecnología de pago sin contacto; un incremento en las conferencias de voz y video, etc.</p>
 <br><br><br><br>
 <h2 ALIGN="center" id="situacion actual">Situación actual de la pandemia</h2>
 
 <p>Hace unas semanas (1 de septiembre) el presidente anunció que se culminará la cuarentena general pero se estará en una cuarentena selectiva.</p>
-<img scr="https://webimages.iadb.org/Drupal_pantheon/2020-03/bannercovidciudadanos.jpg?o4J4IwZzaIRa6Xm7sdlMv2BzOGMaOFXz" alt="jóven con tapabocas" width="350" height="280">
+<img scr="https://webimages.iadb.org/Drupal_pantheon/2020-03/bannercovidciudadanos.png?o4J4IwZzaIRa6Xm7sdlMv2BzOGMaOFXz" alt="jóven con tapabocas" width="350" height="280">
 
 <p>"Empieza una nueva fase en la que cambiamos el concepto de aislamiento obligatorio a que tengamos un concepto de aislamiento selectivo, de distanciamiento y responsabilidad individual", dijo Duque en su pronunciamiento diario sobre las medidas gubernamentales contra el coronavirus.</p>
 
@@ -96,7 +96,7 @@
                  
     <br>        
 
-<img scr="https://images.daznservices.com/di/library/GOAL/42/d3/coronavirus-mask-hand-sanitizer_d1i0rd87v7p2150bg2r3uia0p.jpg?t=-763927496&amp;quality=60&amp;w=700" alt="Los implementos de seguridad como el tapabocas, la gel antibacterial" width="360" height="280">
+<img scr="https://images.daznservices.com/di/library/GOAL/42/d3/coronavirus-mask-hand-sanitizer_d1i0rd87v7p2150bg2r3uia0p.png?t=-763927496&amp;quality=60&amp;w=700" alt="Los implementos de seguridad como el tapabocas, la gel antibacterial" width="360" height="280">
 <br><br>
 <div id="enlace2">
 <p id="video1"><a href="https://www.youtube.com/watch?v=n_k-ne9mN4s">Cosas positivas de la cuarentena</a></p>
